--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
 		"psr-4": {
 			"Models\\": "app/src/modules/models/",
 			"Controllers\\": "app/src/modules/controllers/",
+			"Database\\": "app/src/core/db",
 			"Shared\\": "app/src/shared/"
 		}
 	}
