--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
 	"license": "ISC",
 	"type": "commonjs",
 	"description": "",
-	"dependencies": {
-		"sass": "^1.84.0",
+	"devDependencies": {
+		"sass": "^1.85.0",
 		"typescript": "^5.7.3"
 	}
 }
